first version of elx for Elasticsearch 6.3.2