@@ -1,27 +1,13 @@
-import java.time.ZonedDateTime
-import java.time.format.DateTimeFormatter
-
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            url 'http://xbib.org/repository'
-        }
-    }
-    dependencies {
-        classpath "org.xbib.elasticsearch:gradle-plugin-elasticsearch-build:6.3.2.4"
-    }
-}
 
 plugins {
     id "org.sonarqube" version "2.6.1"
     id "io.codearte.nexus-staging" version "0.11.0"
+    id "com.github.spotbugs" version "1.6.9"
     id "org.xbib.gradle.plugin.asciidoctor" version "1.6.0.1"
 }
 
-printf "Date: %s\nHost: %s\nOS: %s %s %s\nJava: %s %s %s %s\nGradle: %s Groovy: %s Java: %s\n" +
+printf "Host: %s\nOS: %s %s %s\nJava: %s %s %s %s\nGradle: %s Groovy: %s Java: %s\n" +
         "Build: group: ${project.group} name: ${project.name} version: ${project.version}\n",
-        ZonedDateTime.now().format(DateTimeFormatter.ISO_DATE_TIME),
         InetAddress.getLocalHost(),
         System.getProperty("os.name"),
         System.getProperty("os.arch"),
@@ -33,31 +19,28 @@ printf "Date: %s\nHost: %s\nOS: %s %s %s\nJava: %s %s %s %s\nGradle: %s Groovy: 
         gradle.gradleVersion, GroovySystem.getVersion(), JavaVersion.current()
 
 
-apply plugin: "io.codearte.nexus-staging"
-apply plugin: 'org.xbib.gradle.plugin.asciidoctor'
-
-ext {
-    user = 'jprante'
-    name = 'elx'
-    description = 'Elasticsearch extensions'
-    scmUrl = 'https://github.com/' + user + '/' + name
-    scmConnection = 'scm:git:git://github.com/' + user + '/' + name + '.git'
-    scmDeveloperConnection = 'scm:git:git://github.com/' + user + '/' + name + '.git'
+if (JavaVersion.current() < JavaVersion.VERSION_11) {
+    throw new GradleException("This build must be run with java 11 or higher")
 }
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
     apply plugin: 'signing'
+    apply plugin: 'com.github.spotbugs'
+    apply plugin: 'pmd'
+    apply plugin: 'checkstyle'
+    apply plugin: 'org.xbib.gradle.plugin.asciidoctor'
 
     configurations {
-        wagon
-        alpnagent
         asciidoclet
+        wagon
     }
 
     dependencies {
-        alpnagent "org.mortbay.jetty.alpn:jetty-alpn-agent:${project.property('alpnagent.version')}"
+        testCompile "junit:junit:${project.property('junit.version')}"
+        testCompile "org.apache.logging.log4j:log4j-core:${project.property('log4j.version')}"
+        testCompile "org.apache.logging.log4j:log4j-slf4j-impl:${project.property('log4j.version')}"
         asciidoclet "org.xbib:asciidoclet:${project.property('asciidoclet.version')}"
         wagon "org.apache.maven.wagon:wagon-ssh:${project.property('wagon.version')}"
     }
@@ -71,10 +54,32 @@ subprojects {
         targetCompatibility = JavaVersion.VERSION_11
     }
 
-    jar {
-        baseName "${rootProject.name}-${project.name}"
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:all"
+        if (!options.compilerArgs.contains("-processor")) {
+            options.compilerArgs << '-proc:none'
+        }
     }
 
+    test {
+        jvmArgs =[
+                '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
+                '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+                '--add-opens=java.base/java.nio=ALL-UNNAMED'
+        ]
+        systemProperty 'jna.debug_load', 'true'
+        testLogging {
+            showStandardStreams = true
+            exceptionFormat = 'full'
+        }
+    }
+    
+    clean {
+        delete "data"
+        delete "logs"
+        delete "out"
+    }
+    
     /*javadoc {
         options.docletpath = configurations.asciidoclet.files.asType(List)
         options.doclet = 'org.xbib.asciidoclet.Asciidoclet'
@@ -105,16 +110,76 @@ subprojects {
         archives javadocJar, sourcesJar
     }*/
 
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier 'javadoc'
+    }
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        from sourceSets.main.allSource
+        classifier 'sources'
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+    
     if (project.hasProperty('signing.keyId')) {
         signing {
             sign configurations.archives
         }
     }
 
-    apply from: "${rootProject.projectDir}/gradle/ext.gradle"
     apply from: "${rootProject.projectDir}/gradle/publish.gradle"
-    //apply from: "${rootProject.projectDir}/gradle/sonarqube.gradle"
 
+    spotbugs {
+        effort = "max"
+        reportLevel = "low"
+        //includeFilter = file("findbugs-exclude.xml")
+    }
+
+    tasks.withType(com.github.spotbugs.SpotBugsTask) {
+        ignoreFailures = true
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
+    }
+
+    tasks.withType(Pmd) {
+        ignoreFailures = true
+        reports {
+            xml.enabled = true
+            html.enabled = true
+        }
+    }
+    tasks.withType(Checkstyle) {
+        ignoreFailures = true
+        reports {
+            xml.enabled = true
+            html.enabled = true
+        }
+    }
+
+    pmd {
+        toolVersion = '6.11.0'
+        ruleSets = ['category/java/bestpractices.xml']
+    }
+
+    checkstyle {
+        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
+        ignoreFailures = true
+        showViolations = true
+    }
+
+    sonarqube {
+        properties {
+            property "sonar.projectName", "${project.group} ${project.name}"
+            property "sonar.sourceEncoding", "UTF-8"
+            property "sonar.tests", "src/test/java"
+            property "sonar.scm.provider", "git"
+            property "sonar.junit.reportsPath", "build/test-results/test/"
+        }
+    }
 }
 
 /*asciidoctor {
